# math-helper

./: .gitignore  README.md  pyproject.toml  sandbox.py  setup.cfg  task1.py  task10.py  task11.py  task12.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py
src/__deprecated/_graph/: __init__.py  helpers.py
src/__deprecated/_graph/_deprecated/: algorithms.py  digraph.py  dot_attributes_mixin.py  graph.py  helpers.py  iterators.py
src/__deprecated/_graph/base/: __init__.py  edge.py  graph.py  graph_data.py  vertex.py  view.py
src/__deprecated/_graph/digraph/: __init__.py  digraph.py
src/__deprecated/_graph/dot/: __init__.py  base_dr.py  digraph_dr.py  dot_model.py  dot_renderer.py  ndgraph_dr.py
src/__deprecated/_graph/ndgraph/: __init__.py  algorithms.py  ndgraph.py
src/__deprecated/_graph/tree/: __init__.py
src/math_helper/graph/: __init__.py  helpers.py
src/math_helper/graph/algorithms/: __init__.py  _algorithms.py  chromatic_polynom_creator.py  edmonds_karp.py  find_euler_path.py  get_eccentricities.py  get_floyd_matrix.py  is_full.py  is_null.py  kosaraju.py  prufer.py  rdc.py
src/math_helper/graph/common/: __init__.py  base_graph.py  (+3 more)
src/math_helper/infinity/: __init__.py
src/math_helper/matrix/: matrix.py
src/math_helper/polynom/: __init__.py
src/math_helper/utils/: __init__.py  types.py
tests/: test_tasks.py
tests/test_graph/: test_algorithms.py  test_graph.py  test_graph.py.bak
tests/test_graph/test_models/: test_edge_model.py  test_graph_model.py  test_vertex_model.py
tests/test_polynom/: tests.py
(+53 files in other folders)
