[metadata]
name = math_helper
version = attr: math_helper.__version__
author = kira607
author_email = kirill.lesckin@gmail.com
url = https://github.com/kira607/math_helper
description = A python package with useful OOP math staff and algorithms.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = false
include_package_data = false
python_requires = >=3.8
package_dir =
    =src
packages = find:
setup_requires =
    setuptools>=46.4.0
install_requires =
    dot2tex

[options.extras_require]
test =
    pytest

[options.packages.find]
where = src

;[options.entry_points]
;console_scripts =
;    uni = uni.run_cli:run_cli

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
